# SampleTrickModel

./: .clang-format  .clang-tidy  .gitignore  README.md  S_define  S_overrides.mk
.github/workflows/: Unit Tests.yml
Modified_data/: realtime.py
RUN_test/: input.py
models/: ModelX.cpp  ModelX.hpp  Renda.cpp  Renda.hpp
models/MyModel/: myModel.hpp
models/common/: DataFlow.hh  DataFlow.hpp  InFlow.hh  InFlow.hpp  OutFlow.hh  OutFlow.hpp  client.hpp  dataFlow.hpp  load.hpp  modelEvent.hh  modelEvent.hpp
models/common/network/client/: client.cpp  client.hpp
models/common/network/server/: server.cpp  server.hpp
models/math/: math.cpp  math.hpp
models/memoryManagedModel/: memoryManagedModel.cpp  memoryManagedModel.hpp
models/model/: model.cpp  model.hpp
models/modelDummy/: modelDummy.cpp  modelDummy.hpp
models/modelWithEvents/: modelWithEvents.cpp  modelWithEvents.hpp
models/modelWithLoad/: modelWithLoad.cpp  modelWithLoad.hpp
models/modelX/: ModelX.cpp  ModelX.hh  ModelX.hpp  modelX.cpp  modelX.hpp
models/modelY/: ModelY.cpp  ModelY.hh  ModelY.hpp  modelY.cpp  modelY.hpp
models/root/: Root.hh  Root.hpp  root.cpp  root.hpp
tests/: CMakeLists.txt  Dependencies.md  SourceFiles.cmake  test_modelX.cpp  test_renda.cpp
tests/mocks/: mock_exec_proto.cpp
tests/mocks/EventManager_c_intf/: mock_EventManager_c_intf.cpp  mock_EventManager_c_intf.hpp
tests/mocks/exec_proto/: mock_exec_proto.cpp  mock_exec_proto.hpp
tests/models/math/: test_math.cpp
tests/models/modelX/: test_modelDummy.cpp  test_modelX.cpp
tests/scripts/: build.sh  clean.sh  coverage.sh  gcovr.cfg  run.sh
